<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminActivity"
    android:weightSum="4">


    <Button
        android:id="@+id/aaBtnGestadmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/aaBtnGestadmin"
        android:background="@color/colorPrimary"
        />

    <Button
        android:id="@+id/aaBtnAddevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/aaBtnAddevent" />

    <Button
        android:id="@+id/aaBtnChangpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/aaBtnChangpass"
        android:background="@color/colorPrimary"
        />

    <Button
        android:id="@+id/aaBtnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/aaBtnLogout"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        />

</LinearLayout>



