<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddeventActivity">


    <EditText
        android:id="@+id/agEtTitulo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:hint="@string/agEtTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:inputType="text"
        android:autofillHints="" />


    <EditText
        android:id="@+id/agEtDescripcion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:inputType="text"
        android:hint="@string/agEtDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agEtTitulo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/agEtLugar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/agEtLugar"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agEtDescripcion" />

    <EditText
        android:id="@+id/agEtHora"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/agEtHora"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agEtLugar" />

    <EditText
        android:id="@+id/agEtFecha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/agEtFecha"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agEtHora" />

    <Button
        android:id="@+id/agBtnRegevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:enabled="true"
        android:text="@string/agBtnRegevent"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agEtFecha" />


</androidx.constraintlayout.widget.ConstraintLayout>